--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>My Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
     <script src='main.js'></script>
+     <link rel='stylesheet'  href='css/style.css'>
 </head>
 <body>
     <div class="container">
